<resources>
    <string name="app_name">ColorBox</string>
    <string name="box_five">Box Five</string>
    <string name="box_four">Box Four</string>
    <string name="box_three">Box Three</string>
    <string name="box_two">Box two</string>
    <string name="box_one">Box One</string>
    <string name="tap_the_button_and_then_tap_the_box">Tap the Button and then tap the box</string>
    <string name="this_is_a_game">This is a game:</string>
    <string name="red">RED</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>