<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBox1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/box_one"

        android:src="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBox2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/box_two"
        android:src="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBox1" />

    <ImageView
        android:id="@+id/imgBox3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/box_three"
        android:src="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBox2" />

    <ImageView
        android:id="@+id/imgBox4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/box_four"
        android:src="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBox3" />

    <ImageView
        android:id="@+id/imgBox5"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/box_five"
        android:src="@drawable/box"
        app:layout_constraintEnd_toStartOf="@+id/imgBox3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBox1" />

    <TextView
        android:id="@+id/txtBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/box_one"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box_two"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBox2"
        app:layout_constraintEnd_toEndOf="@+id/imgBox2"
        app:layout_constraintStart_toStartOf="@+id/imgBox2"
        app:layout_constraintTop_toTopOf="@+id/imgBox2" />

    <TextView
        android:id="@+id/txtBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box_three"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBox3"
        app:layout_constraintEnd_toEndOf="@+id/imgBox3"
        app:layout_constraintStart_toStartOf="@+id/imgBox3"
        app:layout_constraintTop_toTopOf="@+id/imgBox3" />

    <TextView
        android:id="@+id/txtBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box_four"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBox4"
        app:layout_constraintEnd_toEndOf="@+id/imgBox4"
        app:layout_constraintStart_toStartOf="@+id/imgBox4"
        app:layout_constraintTop_toTopOf="@+id/imgBox4" />

    <TextView
        android:id="@+id/txtBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/box_five"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBox5"
        app:layout_constraintEnd_toEndOf="@+id/imgBox5"
        app:layout_constraintStart_toStartOf="@+id/imgBox5"
        app:layout_constraintTop_toTopOf="@+id/imgBox5" />

    <TextView
        android:id="@+id/txtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/this_is_a_game"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/tap_the_button_and_then_tap_the_box"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeading" />

    <Button
        android:id="@+id/btnRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shp"
        android:text="@string/red"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672" />

    <Button
        android:id="@+id/btnGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_shp3"
        android:text="@string/green"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYellow" />

    <Button
        android:id="@+id/btnYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_shp2"
        android:text="@string/yellow"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRed" />


</androidx.constraintlayout.widget.ConstraintLayout>